--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,13 @@
 		<div class="controls">
 			<button id="toggle-expand"></button>
 		</div>
+		<div id="modal">
+			<button id="close-btn">&gt; close &lt;</button>
+			<img src="assets/stars_pattern.png" alt="sun">
+			<div id="modal-body">
+			</div>
+		</div>
 	</div>
-	<script type="module" src="script.js"></script>
+	<script type="module" src="js/script.js"></script>
 </body>
 </html>
